# Gphoto-Daemon

./: .clang-format  .gitignore  CMakeLists.txt  gphoto_daemon.ini  readme.md
include/: Buffer.h  Commander.h  Fixed_Array.h  Logger.h  ServerSocket.h  Socket.h  buffer.h  command_pipe.h  commander.h  common.h  daemon_config.h  format.h  formater.h  gphoto-error.h  gphoto-widget.h  gphoto.h  hash.h  html_element.h  instruction.h  linux_error.h  named_pipe.h  static_string.h  status.h  tuple.h  type_descriptor.h  utility.h
include/C_files/: GPhoto2D.h  GPhoto2DCmd.h  GPhoto2DUtils.h
include/gphoto_wrapper/: camera.h  camera_abilities.h  camera_storage.h  common.h  file.h  list.h  port_info.h
src/: daemon_config.cpp  gphoto.cpp  linux_error.cpp  main.cpp  named_pipe.cpp
src/C_files/: GPhoto2D.c  GPhoto2DCmd.c  GPhoto2DUtils.c  main.c
src/gphoto_wrapper/: camera.cpp  camera_abilities.cpp  camera_storage.cpp  file.cpp  list.cpp  port_info.cpp
